new file:   License.txt new file:   PBEM00-FlashTool/Command.cs new file:   PBEM00-FlashTool/CommandPromptUtils.cs new file:   PBEM00-FlashTool/ConsoleHelper.cs new file:   PBEM00-FlashTool/FlashUtils.cs new file:   PBEM00-FlashTool/GlobalVariables.cs new file:   PBEM00-FlashTool/Main.cs new file:   PBEM00-FlashTool/bin/Debug/net8.0-windows/Data/dependences.bat new file:   PBEM00-FlashTool/bin/Debug/net8.0-windows/Data/fastbootFlash.bat new file:   PBEM00-FlashTool/bin/Debug/net8.0-windows/Data/req new file:   PBEM00-FlashTool/bin/Release/net8.0-windows/Config.example.ini new file:   PBEM00-FlashTool/bin/Release/net8.0-windows/Data/AdbWinApi.dll new file:   PBEM00-FlashTool/bin/Release/net8.0-windows/Data/AdbWinUsbApi.dll new file:   PBEM00-FlashTool/bin/Release/net8.0-windows/Data/NOTICE.txt new file:   PBEM00-FlashTool/bin/Release/net8.0-windows/Data/adb.exe new file:   PBEM00-FlashTool/bin/Release/net8.0-windows/Data/d_fastbootFlash.bat new file:   PBEM00-FlashTool/bin/Release/net8.0-windows/Data/fastboot.exe new file:   PBEM00-FlashTool/bin/Release/net8.0-windows/Data/fastbootFlash.bat new file:   PBEM00-FlashTool/bin/Release/net8.0-windows/Data/oppo_decrypt.py new file:   PBEM00-FlashTool/bin/Release/net8.0-windows/Data/req new file:   PBEM00-FlashTool/obj/Debug/net8.0-windows/.NETCoreApp,Version=v8.0.AssemblyAttributes.cs new file:   PBEM00-FlashTool/obj/Debug/net8.0-windows/App.g.i.cs new file:   PBEM00-FlashTool/obj/Debug/net8.0-windows/MainWindow.g.i.cs new file:   PBEM00-FlashTool/obj/Debug/net8.0-windows/PBEM00-F.3F8C5CE5.Up2Date new file:   PBEM00-FlashTool/obj/Debug/net8.0-windows/PBEM00-FlashTool.AssemblyInfo.cs new file:   PBEM00-FlashTool/obj/Debug/net8.0-windows/PBEM00-FlashTool.AssemblyInfoInputs.cache new file:   PBEM00-FlashTool/obj/Debug/net8.0-windows/PBEM00-FlashTool.GeneratedMSBuildEditorConfig.editorconfig new file:   PBEM00-FlashTool/obj/Debug/net8.0-windows/PBEM00-FlashTool.GlobalUsings.g.cs new file:   PBEM00-FlashTool/obj/Debug/net8.0-wi

--- a/PBEM00-FlashTool/PBEM00-FlashTool.csproj
+++ b/PBEM00-FlashTool/PBEM00-FlashTool.csproj
@@ -17,6 +17,10 @@ Made by MalNEW aka. Malware_MEZM</Description>
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Command.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
     <None Include="bin\Debug\net8.0-windows\license">
       <Pack>True</Pack>
       <PackagePath>\</PackagePath>
@@ -24,6 +28,11 @@ Made by MalNEW aka. Malware_MEZM</Description>
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="NuGet.CommandLine" Version="6.10.1">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
+    <PackageReference Include="Redpoint.ThirdParty.System.CommandLine" Version="2024.1177.305" />
     <PackageReference Include="YamlDotNet" Version="15.3.0" />
   </ItemGroup>
 
